# MooerLooperManager

./: .dockerignore  .gitignore  99-mooer-looper.rules  CMakeLists.txt  README.md
.github/workflows/: build.yml
packaging/appimage/: build.sh
packaging/docker/: Dockerfile  docker-entrypoint.sh  rebuild_image.sh  rebuild_image_nosudo.sh
packaging/flatpak/: build-with-docker.sh  build.sh  internal-build-script.sh  io.github.shpala.MooerLooperManager.yml  portaudio-cmake-fix.patch
resources/: MooerLooperManager.desktop  resources.qrc
src/: audio_utils.cpp  audio_utils.h  main.cpp  mainwindow.cpp  mainwindow.h  protocol.cpp  protocol.h  usb_device.cpp  usb_device.h  worker.cpp  worker.h
